--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
+		"test": "node ./dist/discord-testing/index.js",
+		"deploy": "node ./dist/discord-testing/deploy.js",
 		"build": "tsc",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint . --ext .ts",
@@ -28,19 +30,26 @@
 	},
 	"homepage": "https://github.com/CarelessInternet/discord.js-games#readme",
 	"devDependencies": {
+		"@discordjs/rest": "^0.1.0-canary.0",
+		"@types/node": "^16.11.6",
+		"@types/node-fetch": "^3.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
+		"dotenv": "^10.0.0",
 		"eslint": "^8.1.0",
+		"path": "^0.12.7",
 		"prettier": "^2.4.1",
 		"typescript": "^4.4.4"
 	},
 	"dependencies": {
-    "discord.js": "^13.2.0"
+		"@discordjs/builders": "^0.7.0",
+		"discord.js": "^13.2.0"
 	},
-  "engines": {
-    "node": ">=16.6.0"
-  },
-  "files": [
-    "./dist/**/*"
-  ]
+	"engines": {
+		"node": ">=16.6.0"
+	},
+	"files": [
+		"./dist/src/**/*",
+		"./dist/package.json"
+	]
 }
