--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
 		"alwaysStrict": true,
 		"skipLibCheck": false,
 		"removeComments": false,
-		"resolveJsonModule": false,
+		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"moduleResolution": "Node",
 		"strictPropertyInitialization": false
 	},
-	"include": ["./src/index.ts"]
+	"include": ["./src/**/*", "./discord-testing/**/*"]
 }
