--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
 	"devDependencies": {
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"@types/node": "^16.11.6",
-		"@types/node-fetch": "^3.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"dotenv": "^10.0.0",
@@ -43,10 +42,13 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "^0.7.0",
+		"@types/node-fetch": "^2.5.12",
 		"discord.js": "^13.2.0"
 	},
 	"engines": {
 		"node": ">=16.6.0"
 	},
-	"files": ["./dist/src/**/*"]
+	"files": [
+		"./dist/src/**/*"
+	]
 }
