--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"@types/node": "^16.11.6",
 		"@types/node-fetch": "^2.5.12",
+		"@types/shuffle-array": "^1.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"dotenv": "^10.0.0",
@@ -44,7 +45,8 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "^0.8.2",
-		"discord.js": "^13.3.1"
+		"discord.js": "^13.3.1",
+		"shuffle-array": "^1.0.1"
 	},
 	"engines": {
 		"node": ">=16.6.0"
