--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "^0.8.2",
-		"discord.js": "^13.3.1",
-		"shuffle-array": "^1.0.1"
+		"discord.js": "^13.3.1"
 	},
 	"engines": {
 		"node": ">=16.6.0"
